SERVER-57483 Fix caching $lookup results for config.cache.chunks.

(cherry picked from commit 0c046b785bd8d48114f627e105c7215e4734c6db)